--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ body {
   top: 50%;
   transform: translate(-50%, -50%);
   cursor: pointer;
+  display: none;
 }
 .container .video-player .close-btn {
   position: absolute;
