--- a/css/main.scss
+++ b/css/main.scss
@@ -82,6 +82,7 @@ body {
         top:50%;
         transform: translate(-50%, -50%);
         cursor: pointer;
+        display: none;
 
         .close-btn {
             position: absolute;
