fix assets and got videos to display

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,7 +58,7 @@ body {
 
         p {
             //margin-left: 20px;
-            margin: auto;
+            margin: auto 5%;
             color: #707070;
             line-height: 22px;
             font-size: 15px;
