--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ body {
   width: 100%;
 }
 .container .small-img-row p {
-  margin: auto;
+  margin: auto 5%;
   color: #707070;
   line-height: 22px;
   font-size: 15px;
